--- a/crates/dataplus-tauri/Cargo.toml
+++ b/crates/dataplus-tauri/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "dataplus"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
+authors = ["DataPlus"]
 edition = "2021"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -20,6 +20,6 @@ tauri-build = { version = "2", features = [] }
 [dependencies]
 tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
+anyhow = { workspace = true }
