--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["crates/dataplus-*"]
+members = ["crates/tablix-*"]
 
 [workspace.dependencies]
 serde = { version = "1", features = ["derive"] }
