--- a/crates/tablix-tauri/Cargo.toml
+++ b/crates/tablix-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "dataplus"
+name = "tablix"
 version = "0.1.0"
-authors = ["DataPlus"]
+authors = ["toshmukhamedov"]
 edition = "2021"
 publish = false
 
@@ -11,7 +11,7 @@ publish = false
 # The `_lib` suffix may seem redundant but it is necessary
 # to make the lib name unique and wouldn't conflict with the bin name.
 # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
-name = "dataplus_lib"
+name = "tablix_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
