--- a/crates/tablix-tauri/Cargo.toml
+++ b/crates/tablix-tauri/Cargo.toml
@@ -23,3 +23,4 @@ tauri-plugin-opener = "2"
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 anyhow = { workspace = true }
+tauri-plugin-os = "2"
