--- a/package.json
+++ b/package.json
@@ -1,23 +1,34 @@
 {
-  "name": "tablix",
-  "private": true,
-  "version": "0.1.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "tauri": "tauri"
-  },
-  "dependencies": {
-    "preact": "^10.25.1",
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2"
-  },
-  "devDependencies": {
-    "@preact/preset-vite": "^2.9.3",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.3",
-    "@tauri-apps/cli": "^2"
-  }
+	"name": "@tablix/root",
+	"private": true,
+	"version": "0.1.0",
+	"type": "module",
+	"scripts": {
+		"dev:desktop": "pnpm tauri dev",
+		"dev:internal-tauri": "turbo watch --filter @tablix/desktop dev",
+		"package": "turbo run package",
+		"build": "turbo run build --no-daemon",
+		"build:desktop": "turbo run --filter @tablix/desktop build --no-daemon",
+		"check": "turbo run check --no-daemon",
+		"format": "prettier . --write",
+		"format:check": "prettier . --check",
+		"tauri": "tauri"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.23.0",
+		"@tauri-apps/cli": "^2",
+		"eslint": "^9.23.0",
+		"eslint-config-prettier": "^10.1.1",
+		"eslint-plugin-svelte": "^3.3.3",
+		"globals": "^16.0.0",
+		"prettier": "3.5.3",
+		"prettier-plugin-svelte": "^3.3.3",
+		"turbo": "^2.4.4",
+		"typescript": "~5.6.3",
+		"typescript-eslint": "^8.28.0"
+	},
+	"packageManager": "pnpm@10.6.5",
+	"engines": {
+		"node": ">=22.11.0"
+	}
 }
