--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,17 @@
 [workspace]
 members = ["crates/tablix-*"]
+resolver = "3"
 
 [workspace.dependencies]
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 anyhow = "1.0.97"
+uuid = {version = "1.16.0", features = ["v4"]}
+tracing = "0.1"
+tracing-subscriber = "0.3"
+
+tablix-storage = { path = "crates/tablix-storage" }
+tablix-project = { path = "crates/tablix-project" }
 
 [profile.dev]
 incremental = true # Compile your binary in smaller steps.
