--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -12,16 +12,21 @@
 		"tauri": "tauri"
 	},
 	"license": "MIT",
+	"dependencies": {
+		"@tabler/icons-svelte": "3.31.0",
+		"svelte-french-toast": "^1.2.0"
+	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^3.0.6",
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"@tabler/icons-svelte": "3.31.0",
 		"@tailwindcss/vite": "4.0.15",
 		"@tauri-apps/api": "^2",
 		"@tauri-apps/cli": "^2",
+		"@tauri-apps/plugin-dialog": "^2.2.2",
 		"@tauri-apps/plugin-opener": "^2",
 		"@tauri-apps/plugin-os": "^2.2.1",
+		"class-transformer": "^0.5.1",
 		"daisyui": "^5.0.9",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
