--- a/crates/tablix-tauri/Cargo.toml
+++ b/crates/tablix-tauri/Cargo.toml
@@ -23,4 +23,12 @@ tauri-plugin-opener = "2"
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 anyhow = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 tauri-plugin-os = "2"
+tauri-plugin-store = "2"
+tauri-plugin-dialog = "2"
+uuid.workspace = true
+
+tablix-storage.workspace = true
+tablix-project.workspace = true
