Refactor desktop frontend to React
Migrate from SvelteKit to a React-based stack using Vite, TanStack Router,
ChakraUI, and Zod. Replace ESLint/Prettier with Biome for linting and
formatting.

--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,8 @@ dist-ssr
 
 # Editor directories and files
 .vscode/*
-!.vscode/extensions.json
 .idea
-.DS_Store
+.zed
 *.suo
 *.ntvs*
 *.njsproj
@@ -33,7 +32,6 @@ cspell.json
 .DS_Store
 node_modules
 build
-.svelte-kit
 package
 .env
 .env.*
