--- a/package.json
+++ b/package.json
@@ -9,23 +9,16 @@
 		"package": "turbo run package",
 		"build": "turbo run build --no-daemon",
 		"build:desktop": "turbo run --filter @tablix/desktop build --no-daemon",
-		"check": "turbo run check --no-daemon",
-		"format": "prettier . --write",
-		"format:check": "prettier . --check",
+		"lint": "biome lint",
+		"format": "biome format",
+		"check": "biome check",
 		"tauri": "tauri"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.23.0",
+		"@biomejs/biome": "1.9.4",
 		"@tauri-apps/cli": "^2",
-		"eslint": "^9.23.0",
-		"eslint-config-prettier": "^10.1.1",
-		"eslint-plugin-svelte": "^3.3.3",
-		"globals": "^16.0.0",
-		"prettier": "3.5.3",
-		"prettier-plugin-svelte": "^3.3.3",
 		"turbo": "^2.4.4",
-		"typescript": "~5.6.3",
-		"typescript-eslint": "^8.28.0"
+		"typescript": "~5.6.3"
 	},
 	"packageManager": "pnpm@10.6.5",
 	"engines": {
