Update dependencies and implement basic Workspace view
Update Rust and Node.js dependencies, including major version bumps for
many crates like Tauri, Tokio, Rustix, and ecosystem libraries.

Refactor the Welcome feature to migrate project state management from a
custom React context/reducer to react-query.

Add a basic Workspace view with a menubar and route handler for project ID.
Integrate the `trash` crate for more robust project directory cleanup.

--- a/biome.json
+++ b/biome.json
@@ -22,7 +22,8 @@
 		"rules": {
 			"recommended": true,
 			"correctness": {
-				"noChildrenProp": "off"
+				"noChildrenProp": "off",
+				"useExhaustiveDependencies": "off"
 			},
 			"style": {
 				"useSelfClosingElements": {
