--- a/crates/tablix-project/Cargo.toml
+++ b/crates/tablix-project/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+trash = "3"
 anyhow.workspace = true
 uuid.workspace = true
 serde.workspace = true
