--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -17,6 +17,7 @@
 		"@mantine/modals": "^8.0.2",
 		"@mantine/notifications": "^8.0.2",
 		"@tabler/icons-react": "3.33.0",
+		"@tanstack/react-query": "^5.80.6",
 		"@tanstack/react-router": "^1.120.10",
 		"@tanstack/react-router-devtools": "^1.120.10",
 		"@tanstack/router-plugin": "^1.120.10",
@@ -25,6 +26,7 @@
 		"@tauri-apps/plugin-dialog": "^2.2.2",
 		"@tauri-apps/plugin-opener": "^2",
 		"@tauri-apps/plugin-os": "^2.2.1",
+		"@types/node": "^22.15.30",
 		"@types/react": "^19.1.5",
 		"@types/react-dom": "^19.1.5",
 		"@vitejs/plugin-react": "^4.5.0",
@@ -35,9 +37,7 @@
 		"zod": "^3.25.28"
 	},
 	"dependencies": {
-		"next-themes": "^0.4.6",
 		"react": "^19.1.0",
-		"react-dom": "^19.1.0",
-		"react-icons": "^5.5.0"
+		"react-dom": "^19.1.0"
 	}
 }
