Add explorer feature with split pane layout
Introduce Explorer component and its modal for adding connections.
Implement connection-specific fields based on connection type.
Integrate Explorer into the Workspace using `@gfazioli/mantine-split-pane`.
Adjust New Project modal validation and path handling.
Update styles and dependencies.

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -11,6 +11,7 @@
 	},
 	"license": "MIT",
 	"devDependencies": {
+		"@gfazioli/mantine-split-pane": "^2.1.2",
 		"@mantine/core": "^8.0.2",
 		"@mantine/form": "^8.0.2",
 		"@mantine/hooks": "^8.0.2",
