--- a/crates/tablix-tauri/Cargo.toml
+++ b/crates/tablix-tauri/Cargo.toml
@@ -2,7 +2,7 @@
 name = "tablix"
 version = "0.1.0"
 authors = ["toshmukhamedov"]
-edition = "2021"
+edition = "2024"
 publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -32,3 +32,4 @@ uuid.workspace = true
 
 tablix-storage.workspace = true
 tablix-project.workspace = true
+tablix-connection.workspace = true
