Extract Explorer tree component
Move the Mantine Tree component and its associated logic (data fetching,
tree state) out of the main Explorer component into a new
`ExplorerTree` component.

Also introduce PostCSS with Mantine preset and simple vars for improved
styling control over the tree component.

This separates concerns and simplifies the main Explorer view.

--- a/biome.json
+++ b/biome.json
@@ -23,7 +23,8 @@
 			"recommended": true,
 			"correctness": {
 				"noChildrenProp": "off",
-				"useExhaustiveDependencies": "off"
+				"useExhaustiveDependencies": "off",
+				"noUnknownFunction": "off"
 			},
 			"style": {
 				"useSelfClosingElements": {
