--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -33,6 +33,9 @@
 		"@vitejs/plugin-react": "^4.5.0",
 		"class-transformer": "^0.5.1",
 		"mantine-form-zod-resolver": "^1.2.1",
+		"postcss": "^8.5.4",
+		"postcss-preset-mantine": "^1.17.0",
+		"postcss-simple-vars": "^7.0.1",
 		"typescript": "~5.6.2",
 		"vite": "^6.0.3",
 		"zod": "^3.25.28"
