--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -11,12 +11,16 @@
 	},
 	"license": "MIT",
 	"devDependencies": {
+		"@codemirror/lang-sql": "^6.10.0",
+		"@codemirror/view": "^6.38.4",
 		"@gfazioli/mantine-split-pane": "^2.1.2",
+		"@mantine/colors-generator": "^8.3.2",
 		"@mantine/core": "^8.0.2",
 		"@mantine/form": "^8.0.2",
 		"@mantine/hooks": "^8.0.2",
 		"@mantine/modals": "^8.0.2",
 		"@mantine/notifications": "^8.0.2",
+		"@replit/codemirror-vim": "^6.3.0",
 		"@tabler/icons-react": "3.33.0",
 		"@tauri-apps/api": "^2",
 		"@tauri-apps/cli": "^2",
@@ -26,8 +30,9 @@
 		"@types/node": "^22.15.30",
 		"@types/react": "^19.1.5",
 		"@types/react-dom": "^19.1.5",
+		"@uiw/react-codemirror": "^4.25.2",
 		"@vitejs/plugin-react": "^4.5.0",
-		"class-transformer": "^0.5.1",
+		"codemirror": "^6.0.2",
 		"mantine-form-zod-resolver": "^1.2.1",
 		"postcss": "^8.5.4",
 		"postcss-preset-mantine": "^1.17.0",
