--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -22,6 +22,7 @@
 		"@mantine/notifications": "^8.0.2",
 		"@replit/codemirror-vim": "^6.3.0",
 		"@tabler/icons-react": "3.33.0",
+		"@tailwindcss/vite": "^4.1.13",
 		"@tauri-apps/api": "^2",
 		"@tauri-apps/cli": "^2",
 		"@tauri-apps/plugin-dialog": "^2.2.2",
@@ -37,6 +38,8 @@
 		"postcss": "^8.5.4",
 		"postcss-preset-mantine": "^1.17.0",
 		"postcss-simple-vars": "^7.0.1",
+		"react-icons": "^5.5.0",
+		"tailwindcss": "^4.1.13",
 		"typescript": "~5.6.2",
 		"vite": "^6.0.3",
 		"zod": "^3.25.28"
