--- a/crates/tablix-tauri/Cargo.toml
+++ b/crates/tablix-tauri/Cargo.toml
@@ -33,3 +33,5 @@ uuid.workspace = true
 tablix-storage.workspace = true
 tablix-project.workspace = true
 tablix-connection.workspace = true
+tokio-postgres = { version = "0.7.14", features = ["with-serde_json-1"] }
+dashmap = "6.1.0"
