--- a/crates/tablix-connection/Cargo.toml
+++ b/crates/tablix-connection/Cargo.toml
@@ -14,4 +14,4 @@ tracing.workspace = true
 tablix-storage.workspace = true
 tablix-project.workspace = true
 tokio-postgres = { version = "0.7.14", features = ["with-serde_json-1"] }
-dashmap = "6.1.0"
+dashmap = { version = "6.1.0", features = ["serde"] }
