--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
+	"$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
 	"vcs": {
 		"enabled": true,
 		"clientKind": "git",
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"includes": ["apps/*"]
+		"includes": ["apps/**"]
 	},
 	"formatter": {
 		"enabled": true,
@@ -22,10 +22,14 @@
 			"correctness": {
 				"noChildrenProp": "off",
 				"useExhaustiveDependencies": "off",
-				"noUnknownFunction": "off"
+				"noUnknownFunction": "off",
+				"useUniqueElementIds": "off"
 			},
 			"a11y": {
 				"useKeyWithClickEvents": "off"
+			},
+			"suspicious": {
+				"noUnknownAtRules": "off"
 			},
 			"style": {
 				"useSelfClosingElements": {
