feat: basic table view

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -23,12 +23,12 @@
 		"@replit/codemirror-vim": "^6.3.0",
 		"@tabler/icons-react": "3.35.0",
 		"@tailwindcss/vite": "^4.1.13",
+		"@tanstack/react-table": "^8.21.3",
 		"@tauri-apps/api": "^2",
 		"@tauri-apps/cli": "^2",
 		"@tauri-apps/plugin-dialog": "^2.4.0",
 		"@tauri-apps/plugin-opener": "^2",
 		"@tauri-apps/plugin-os": "^2.3.1",
-		"@types/node": "^24.6.1",
 		"@types/react": "^19.1.16",
 		"@types/react-dom": "^19.1.9",
 		"@uiw/react-codemirror": "^4.25.2",
