--- a/crates/tablix-tauri/Cargo.toml
+++ b/crates/tablix-tauri/Cargo.toml
@@ -33,5 +33,9 @@ uuid.workspace = true
 tablix-storage.workspace = true
 tablix-project.workspace = true
 tablix-connection.workspace = true
-tokio-postgres = { version = "0.7.14", features = ["with-serde_json-1"] }
+tokio-postgres = { version = "0.7.14", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
 dashmap = "6.1.0"
+validator = { version = "0.20.0", features = ["derive"] }
+chrono = { version = "0.4.42", features = ["serde"] }
+rust_decimal = { version = "1.38.0", features = ["db-tokio-postgres"] }
+bytes = "1.10.1"
