--- a/crates/tablix-tauri/Cargo.toml
+++ b/crates/tablix-tauri/Cargo.toml
@@ -39,3 +39,4 @@ validator = { version = "0.20.0", features = ["derive"] }
 chrono = { version = "0.4.42", features = ["serde"] }
 rust_decimal = { version = "1.38.0", features = ["db-tokio-postgres"] }
 bytes = "1.10.1"
+tokio = { version = "1.47.1", features = ["fs"] }
