--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,9 @@ jobs:
         with:
           node-version: lts/*
 
+      - name: setup pnpm
+        uses: pnpm/action-setup@v4
+
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
 
