--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -11,6 +11,7 @@
 	},
 	"license": "MIT",
 	"devDependencies": {
+		"@codemirror/commands": "^6.9.0",
 		"@codemirror/lang-sql": "^6.10.0",
 		"@codemirror/language": "^6.11.3",
 		"@codemirror/state": "^6.5.2",
@@ -29,7 +30,6 @@
 		"@tauri-apps/api": "^2",
 		"@tauri-apps/cli": "^2",
 		"@tauri-apps/plugin-dialog": "^2.4.0",
-		"@tauri-apps/plugin-opener": "^2",
 		"@tauri-apps/plugin-os": "^2.3.1",
 		"@types/react": "^19.1.16",
 		"@types/react-dom": "^19.1.9",
@@ -37,6 +37,8 @@
 		"@vitejs/plugin-react": "^5.0.4",
 		"codemirror": "^6.0.2",
 		"mantine-form-zod-resolver": "^1.3.0",
+		"mobx": "^6.15.0",
+		"mobx-react-lite": "^4.1.1",
 		"postcss": "^8.5.6",
 		"postcss-preset-mantine": "^1.18.0",
 		"postcss-simple-vars": "^7.0.1",
