--- a/crates/tablix-project/Cargo.toml
+++ b/crates/tablix-project/Cargo.toml
@@ -4,11 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-trash = "3"
 anyhow.workspace = true
 uuid.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-tracing.workspace = true
+log.workspace = true
 
 tablix-storage.workspace = true
