--- a/crates/tablix-connection/Cargo.toml
+++ b/crates/tablix-connection/Cargo.toml
@@ -9,7 +9,7 @@ anyhow.workspace = true
 uuid.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-tracing.workspace = true
+log.workspace = true
 
 tablix-storage.workspace = true
 tablix-project.workspace = true
